force-app/main/default/objects/Parts__c/Parts__c.object-meta.xml
<CustomObject>
    <description>パーツ・解体（唄）</description>
    <label>パーツ・解体</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>パーツ・解体</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>