force-app/main/default/objects/Parts__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>パーツ・解体</relationshipLabel>
    <relationshipName>Country_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>