force-app/main/default/objects/Parts__c/fields/Damage_Details__c.field-meta.xml
<CustomField>
    <fullName>Damage_Details__c</fullName>
    <label>損害情報</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>エンジン後退</fullName>
            </value>
            <value>
                <fullName>エンジンかからない</fullName>
            </value>
            <value>
                <fullName>エアバッグ展開</fullName>
            </value>
            <value>
                <fullName>足回り✕</fullName>
            </value>
            <value>
                <fullName>足回り後退</fullName>
            </value>
            <value>
                <fullName>ピラー凹み</fullName>
            </value>
            <value>
                <fullName>ピラー✕</fullName>
            </value>
            <value>
                <fullName>ルーフ凹み</fullName>
            </value>
            <value>
                <fullName>フレーム曲がり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>