force-app/main/default/objects/Parts__c/fields/Details_Notes__c.field-meta.xml
<CustomField>
    <fullName>Details_Notes__c</fullName>
    <label>備考（装備/損害情報）</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>