force-app/main/default/objects/Parts__c/fields/Grades__c.field-meta.xml
<CustomField>
    <fullName>Grades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>グレード</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Grades__c.maker__r.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <filterItems>
            <field>Mst_Grades__c.model__r.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <filterItems>
            <field>Mst_Grades__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Grades__c</referenceTo>
    <relationshipLabel>パーツ・解体</relationshipLabel>
    <relationshipName>Grade_parts1</relationshipName>
    <type>Lookup</type>
</CustomField>