force-app/main/default/objects/Parts__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員（台帳連携項目）</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>パーツ・解体</relationshipLabel>
    <relationshipName>member_auction_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>