force-app/main/default/objects/Parts__c/fields/Model_Types__c.field-meta.xml
<CustomField>
    <fullName>Model_Types__c</fullName>
    <label>車両形状（乗用車）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>軽自動車</fullName>
            </value>
            <value>
                <fullName>コンパクトカー</fullName>
            </value>
            <value>
                <fullName>ミニバン/ワンボックス</fullName>
            </value>
            <value>
                <fullName>セダン</fullName>
            </value>
            <value>
                <fullName>ステーションワゴン</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>オープンカー</fullName>
            </value>
            <value>
                <fullName>高級車</fullName>
            </value>
            <value>
                <fullName>商用車</fullName>
            </value>
            <value>
                <fullName>軽トラック</fullName>
            </value>
            <value>
                <fullName>キャンピングカー</fullName>
            </value>
            <value>
                <fullName>福祉車両</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>