force-app/main/default/objects/Parts__c/fields/Sales_Channel1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel1__c</fullName>
    <label>販路</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>パーツオークション</fullName>
            </value>
            <value>
                <fullName>輸出</fullName>
            </value>
            <value>
                <fullName>小売</fullName>
            </value>
            <value>
                <fullName>業販</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>