force-app/main/default/objects/Parts__c/fields/Vehicle_Condition_Types__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Condition_Types__c</fullName>
    <label>車両状態</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>事故車</fullName>
            </value>
            <value>
                <fullName>中古車</fullName>
            </value>
            <value>
                <fullName>故障車</fullName>
            </value>
            <value>
                <fullName>水害車</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>