force-app/main/default/objects/Parts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month_Purchases1__c</columns>
    <columns>Model_Types__c</columns>
    <columns>Truck_Body_Types__c</columns>
    <columns>Heavy_Equipment_Types__c</columns>
    <columns>Fuel_Types__c</columns>
    <columns>Drive_Type__c</columns>
    <columns>Steering_Position__c</columns>
    <columns>Transmission__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>